# autogqla

./: .gitignore  README.md  pyproject.toml
autogqla/: __init__.py  base.py  condition_constructor.py  schema.py  spec.py  spec_resolver.py
autogqla/fields/: __init__.py  base_field.py  identifier_field.py  simple_field.py
autogqla/fields/connections/: __init__.py  base.py  base_loader.py  pagination_connection_field.py  pagination_details.py  pagination_field.py  pagination_helpers.py  pagination_loader.py  relationship_field.py  relationship_loader.py
autogqla/objects/: helpers.py
tests/: conftest.py  model.py  query.py  test_relationship.py
