[tool.poetry]
name = "autogqla"
version = "0.1.0"
description = "Automatically builds a graphene graphql schema from SQLAlchemy models"
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
graphene = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
